let claude change the layout, add footer

--- a/timer-web-app/index.html
+++ b/timer-web-app/index.html
@@ -22,6 +22,9 @@
             <button id="restart-button" disabled>Restart</button>
         </div>
     </div>
+    <footer id="page-footer">
+        <p>&copy; 2023 Timer Web App</p>
+    </footer>
     <audio id="alarm-sound" src="assets/alarm.flac"></audio>
     <script src="js/timer.js"></script>
 </body>
