add privacy policy

--- a/timer-web-app/index.html
+++ b/timer-web-app/index.html
@@ -23,7 +23,7 @@
         </div>
     </div>
     <footer id="page-footer">
-        <p>&copy; 2023 Timer Web App</p>
+        <p><a href="https://dorianrudolph.com/imprint">Privacy Policy & Impressum</a></p>
     </footer>
     <audio id="alarm-sound" src="assets/alarm.flac"></audio>
     <script src="js/timer.js"></script>
