--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <base href="/">
 </head>
-<body>
+<body tabindex="0">
     <div id="timer-container">
         <div id="timer-circle">
             <svg class="progress-ring" width="200" height="200">
